<resources>
    <string name="app_name"></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new Account</string>
    <string name="create_newaccount">Create New Account</string>
    <string name="sign_up">Sign up</string>
    <string name="signin">Sign In</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gotoshop">GoToShop</string>
    <string name="gotohome">gotohome</string>
    <string name="chat">chat</string>
    <string name="menu">menu</string>
    <string name="select_user">Select user</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="type_a_message">type a message</string>
    <string name="find_your_pet">Find Your Pet</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
</resources>