<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="vertical"
    tools:context=".myApp.app.activity.MainActivity"
    android:background="@color/background"
    android:layout_marginTop="@dimen/_10sdp"
    tools:openDrawer="end">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Górna część (nagłówek) -->
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="@dimen/_43sdp"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:id="@+id/logo"
            android:contentDescription="@string/fab_transformation_scrim_behavior"
            android:src="@drawable/findyourpet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="100dp" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:contentDescription="@string/gotohome"
            android:scaleType="fitCenter"
            android:src="@drawable/homebutton"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/gotoshop"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:contentDescription="@string/gotoshop"
            android:src="@drawable/shopping"
            app:layout_constraintStart_toEndOf="@+id/homeButton"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@null"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/chat"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:contentDescription="@string/chat"
            android:src="@drawable/chat"
            app:layout_constraintStart_toEndOf="@+id/gotoshop"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@null"
            android:scaleType="fitCenter" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="?attr/actionBarSize"
            android:maxHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/menu2" />

        <View
            android:id="@+id/vertical_separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"
            android:background="#85614A"
            app:layout_constraintTop_toBottomOf="@+id/homeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Sekcja przewijalna, zaczyna się POD vertical_separator -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/vertical_separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/myTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="To jest testowy tekst"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!-- Dodaj więcej treści, aby testować przewijanie -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Długi tekst testowy"
                    android:textSize="18sp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toBottomOf="@id/myTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end|center"
        app:menu="@menu/menu"
        app:headerLayout="@layout/menu_header" />

</androidx.drawerlayout.widget.DrawerLayout>
